--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 
     <div class="arena">
         <img id="poke2" src="" alt="">
+        <img id="poke" src="" alt="">
     </div>
 
     <div class="stats" id="poke-propio">
@@ -24,6 +25,12 @@
         <p id="tipoPropio"></p>
         <p>Ataque: <span id="ataquePropio"></span></p>
     </div>
+
+    <div>
+        <input id= "input" max="999" type="number">
+        <button id="btn-poke">Elegir pokemon</button>
+    </div>
+
 
     <script src="./app.js"></script>
 </body>
