--- a/index.html
+++ b/index.html
@@ -29,9 +29,15 @@
     <div>
         <input id= "input" max="999" type="number">
         <button id="btn-poke">Elegir pokemon</button>
+        <button id="combate">Ataque</button>
     </div>
 
 
     <script src="./app.js"></script>
 </body>
 </html>
+
+
+
+<!--Camila Celestino Montelongo-->
+<!--Navarrete Mendez Maximiliano-->
